# dmarc-parser

./: .gitignore  README.md  pyproject.toml
example/: example.xml  rfc_5965_B2.eml  rfc_6591_ARF_B1.eml  rfc_7489_B5.eml
src/dmarc/: __init__.py  logger.py  parser.py  report.py
src/dmarcparser/: __init__.py  logger.py  parser.py  report.py
tests/: test_example.py
